[package]
name = "service-top"
version = "0.1.0"
authors = ["jeffypoo <jjones@figure.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.0"
futures = "0.3.13"
futures-timer = "3.0.2"
heim = { version = "0.1.0-rc.1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]